--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "v2",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Simple 2d vector prototype",
-  "main": "v2.js",
+  "main": "lib/v2.js",
   "scripts": {
-    "test": "mocha v2-test.js"
+    "test": "mocha test/v2-test.js"
   },
   "author": "Chris Pettitt <cpettitt@gmail.com>",
   "repository": {
